# PyConfDict

./: .gitignore  .travis.yml  setup.cfg
pyconfdict/: __init__.py
tests/: tests.py
