[metadata]
name = PyConfDict
author = Karel Brinda
author-email = karel.brinda@gmail.com
summary = Python configuration dictionary 
description-file = README.rst
home-page = http://github.com/karel-brinda/rnftools/
requires-python = >=3.0
license = MIT
keywords = configuration, dictionary
zip_safe = True
classifier = 
	Development Status :: 4 - Beta
	Environment :: Console
#	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
#	Operating System :: Unix
#	Topic :: Scientific/Engineering :: Bio-Informatics

[files]
packages = 
	pyconfdict

extra_files = 
	setup.py
	README.rst

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
warnerrors = True

[easy_install]

